@@ -1,4 +1,5 @@
 [1.3.1]
+- Viewport refactoring. https://github.com/libgdx/libgdx/pull/2220
 
 [1.3.0]
 - Added Input.isKeyJustPressed.
